@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-24T01:42:49Z",
-  "count_outdated" : 479,
-  "uniques_outdated" : 274,
-  "count" : 500,
-  "uniques" : 290,
+  "timestamp" : "2022-08-24T08:19:17Z",
+  "count_outdated" : 489,
+  "uniques_outdated" : 282,
+  "count" : 501,
+  "uniques" : 291,
   "clones" : [
-    {
-      "timestamp": "2022-08-10T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ]
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 1,
@@ -51,6 +44,13 @@
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
