@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 13,
+  "count": 12,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-08-10T00:00:00Z",
-      "count": 10,
-      "uniques": 8
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 1,
@@ -35,6 +30,11 @@
     {
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
